cmake_minimum_required(VERSION 2.8.11)
project(Jahshaka)

# set(CMAKE_PREFIX_PATH "C:/Qt/5.9.2/msvc2017_64")

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/extern/assimp/cmake-modules")

find_package(OpenGL REQUIRED) # is this needed?
find_package(Qt5 COMPONENTS Widgets OpenGL Sql Concurrent REQUIRED)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")

# set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
# set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

option(ASSIMP_BUILD_ASSIMP_TOOLS "" OFF)
option(ASSIMP_BUILD_TESTS "" OFF)
option(ASSIMP_NO_EXPORT "" ON)
option(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT "" OFF)
option(ASSIMP_BUILD_OBJ_IMPORTER "" ON)
# option(ASSIMP_BUILD_ZLIB "" ON)

# set variables that are needed
add_subdirectory(src/irisgl/src/assimp)

include_directories(
    "${PROJECT_BINARY_DIR}/src/"
    "${PROJECT_SOURCE_DIR}/src/"
    "${PROJECT_BINARY_DIR}/src/irisgl/src/assimp/include/"
    "${PROJECT_SOURCE_DIR}/src/irisgl/src/assimp/include/"
    "${PROJECT_SOURCE_DIR}/src/irisgl/src"
    "${PROJECT_SOURCE_DIR}/src/irisgl/src/libovr/include"
)

set(SOURCES
src/main.cpp
src/mainwindow.cpp 
src/widgets/colorvaluewidget.cpp 
src/widgets/colorpickerwidget.cpp 
src/dialogs/preferencesdialog.cpp 
src/dialogs/aboutdialog.cpp 
src/dialogs/licensedialog.cpp 
src/dialogs/preferences/worldsettings.cpp 
src/dialogs/loadmeshdialog.cpp 
src/widgets/animationwidget.cpp 
src/widgets/keyframelabelwidget.cpp 
src/widgets/keyframewidget.cpp 
src/widgets/maintimelinewidget.cpp 
src/widgets/timelinewidget.cpp 
src/core/nodekeyframeanimation.cpp 
src/core/project.cpp 
src/core/settingsmanager.cpp 
src/core/surfaceview.cpp 
src/editor/editorcameracontroller.cpp 
src/dialogs/infodialog.cpp 
src/globals.cpp 
src/dialogs/renamelayerdialog.cpp 
src/widgets/sceneviewwidget.cpp 
src/widgets/materialsets.cpp 
src/widgets/modelpresets.cpp 
src/widgets/accordianbladewidget.cpp 
src/widgets/transformeditor.cpp 
src/widgets/scenehierarchywidget.cpp 
src/editor/cameracontrollerbase.cpp 
src/widgets/skypresets.cpp 
src/editor/orbitalcameracontroller.cpp 
src/widgets/scenenodepropertieswidget.cpp 
src/widgets/propertywidgets/lightpropertywidget.cpp 
src/widgets/propertywidgets/materialpropertywidget.cpp 
src/widgets/propertywidgets/worldpropertywidget.cpp 
src/io/scenewriter.cpp 
src/core/thumbnailmanager.cpp 
src/widgets/propertywidgets/fogpropertywidget.cpp 
src/io/assetiobase.cpp 
src/io/materialpresetreader.cpp 
src/widgets/keyframelabeltreewidget.cpp 
src/core/keyboardstate.cpp 
src/io/scenereader.cpp 
src/widgets/propertywidgets/emitterpropertywidget.cpp 
src/widgets/propertywidgets/nodepropertywidget.cpp 
src/editor/editorvrcontroller.cpp 
src/widgets/propertywidgets/demopane.cpp 
src/widgets/labelwidget.cpp 
src/widgets/checkboxwidget.cpp 
src/widgets/textinputwidget.cpp 
src/widgets/comboboxwidget.cpp 
src/widgets/hfloatsliderwidget.cpp 
src/widgets/texturepickerwidget.cpp 
src/io/materialreader.cpp 
src/widgets/filepickerwidget.cpp 
src/widgets/propertywidgets/meshpropertywidget.cpp 
src/widgets/propertywidget.cpp 
src/widgets/propertywidgets/postprocesspropertywidget.cpp 
src/widgets/postprocesseswidget.cpp 
src/dialogs/newprojectdialog.cpp 
src/widgets/assetwidget.cpp 
src/io/assetmanager.cpp 
src/widgets/assetpickerwidget.cpp 
src/widgets/keyframelabel.cpp 
src/uimanager.cpp 
src/widgets/keyframecurvewidget.cpp 
src/dialogs/getnamedialog.cpp 
src/widgets/createanimationwidget.cpp 
src/core/database/database.cpp 
src/core/database/projectdatabase.cpp 
src/core/guidmanager.cpp 
src/commands/transfrormscenenodecommand.cpp 
src/commands/changematerialpropertycommand.cpp 
src/commands/addscenenodecommand.cpp 
src/commands/deletescenenodecommand.cpp 
src/dialogs/progressdialog.cpp 
src/widgets/screenshotwidget.cpp 
src/widgets/projectmanager.cpp 
src/widgets/dynamicgrid.cpp 
src/widgets/itemgridwidget.cpp 
src/dialogs/renameprojectdialog.cpp 
src/editor/thumbnailgenerator.cpp 
src/widgets/mainwindowviewport.cpp 
src/editor/viewercontroller.cpp 
src/dialogs/donatedialog.cpp
src/irisgl/src/graphics/mesh.cpp
src/irisgl/src/materials/defaultmaterial.cpp
src/irisgl/src/scenegraph/meshnode.cpp
src/irisgl/src/graphics/forwardrenderer.cpp
src/irisgl/src/graphics/graphicshelper.cpp
src/irisgl/src/graphics/utils/billboard.cpp
src/irisgl/src/scenegraph/cameranode.cpp
src/irisgl/src/graphics/texture2d.cpp
src/irisgl/src/materials/defaultskymaterial.cpp
src/irisgl/src/graphics/material.cpp
src/irisgl/src/graphics/utils/fullscreenquad.cpp
src/irisgl/src/vr/vrdevice.cpp
src/irisgl/src/geometry/trimesh.cpp
src/irisgl/src/graphics/vertexlayout.cpp
src/irisgl/src/graphics/shader.cpp
src/irisgl/src/graphics/texture.cpp
src/irisgl/src/animation/animation.cpp
src/irisgl/src/animation/keyframeset.cpp
src/irisgl/src/materials/materialhelper.cpp
src/irisgl/src/scenegraph/viewernode.cpp
src/irisgl/src/materials/viewermaterial.cpp
src/irisgl/src/scenegraph/particlesystemnode.cpp
src/irisgl/src/vr/vrmanager.cpp
src/irisgl/src/math/mathhelper.cpp
src/irisgl/src/materials/custommaterial.cpp
src/irisgl/src/graphics/rendertarget.cpp
src/irisgl/src/graphics/postprocessmanager.cpp
src/irisgl/src/postprocesses/coloroverlaypostprocess.cpp
src/irisgl/src/postprocesses/radialblurpostprocess.cpp
src/irisgl/src/postprocesses/bloompostprocess.cpp
src/irisgl/src/postprocesses/greyscalepostprocess.cpp
src/irisgl/src/postprocesses/ssaopostprocess.cpp
src/irisgl/src/animation/propertyanim.cpp
src/irisgl/src/scenegraph/lightnode.cpp
src/irisgl/src/animation/skeletalanimation.cpp
src/irisgl/src/graphics/skeleton.cpp
src/irisgl/src/scenegraph/scene.cpp
src/irisgl/src/scenegraph/scenenode.cpp
src/irisgl/src/geometry/plane.cpp
src/irisgl/src/geometry/frustum.cpp
src/irisgl/src/core/logger.cpp
src/irisgl/src/graphics/renderlist.cpp
src/irisgl/src/graphics/renderitem.cpp
src/irisgl/src/graphics/utils/linemeshbuilder.cpp
src/irisgl/src/graphics/utils/shapehelper.cpp
src/irisgl/src/materials/colormaterial.cpp
src/irisgl/src/postprocesses/fxaapostprocess.cpp
src/irisgl/src/graphics/graphicsdevice.cpp
src/irisgl/src/widgets/renderwidget.cpp
src/irisgl/src/graphics/spritebatch.cpp
src/irisgl/src/graphics/font.cpp
src/irisgl/src/graphics/blendstate.cpp
src/irisgl/src/graphics/depthstate.cpp
src/irisgl/src/graphics/rasterizerstate.cpp
src/irisgl/src/content/contentmanager.cpp
src/irisgl/src/libovr/Src/OVR_CAPI_Util.cpp
src/irisgl/src/libovr/Src/OVR_StereoProjection.cpp
src/irisgl/src/libovr/Src/OVR_CAPIShim.c
src/irisgl/src/zip/zip.c
)

set (HEADERS
src/mainwindow.h 
src/dialogs/renamelayerdialog.h 
src/widgets/colorvaluewidget.h 
src/widgets/colorpickerwidget.h 
src/helpers/settingshelper.h 
src/dialogs/preferencesdialog.h 
src/dialogs/aboutdialog.h 
src/dialogs/licensedialog.h 
src/dialogs/preferences/worldsettings.h 
src/helpers/collisionhelper.h 
src/dialogs/infodialog.h 
src/dialogs/loadmeshdialog.h 
src/widgets/animationwidget.h 
src/widgets/keyframelabelwidget.h 
src/widgets/keyframewidget.h 
src/widgets/layertreewidget.h 
src/widgets/maintimelinewidget.h 
src/widgets/timelinewidget.h 
src/core/keyframeanimation.h 
src/core/keyframes.h 
src/core/nodekeyframe.h 
src/core/nodekeyframeanimation.h 
src/core/project.h 
src/core/settingsmanager.h 
src/core/surfaceview.h 
src/editor/editorcameracontroller.h 
src/globals.h 
src/widgets/sceneviewwidget.h 
src/globals.h 
src/widgets/materialsets.h 
src/widgets/modelpresets.h 
src/widgets/accordianbladewidget.h 
src/widgets/transformeditor.h 
src/widgets/scenehierarchywidget.h 
src/editor/orbitalcameracontroller.h 
src/editor/cameracontrollerbase.h 
src/widgets/skypresets.h 
src/widgets/propertywidgets/transformpropertywidget.h 
src/widgets/propertywidgets/lightpropertywidget.h 
src/widgets/propertywidgets/materialpropertywidget.h 
src/widgets/scenenodepropertieswidget.h 
src/widgets/propertywidgets/worldpropertywidget.h 
src/io/scenewriter.h 
src/io/scenereader.h 
src/widgets/propertywidgets/scenepropertywidget.h 
src/core/thumbnailmanager.h 
src/widgets/propertywidgets/fogpropertywidget.h 
src/core/meshmanager.h 
src/io/assetiobase.h 
src/core/materialpreset.h 
src/io/materialpresetreader.h 
src/widgets/keyframelabeltreewidget.h 
src/io/materialpresetreader.h 
src/editor/gizmohandle.h 
src/editor/translationgizmo.h 
src/editor/rotationgizmo.h 
src/editor/scalegizmo.h 
src/editor/gizmoinstance.h 
src/core/keyboardstate.h 
src/editor/editordata.h 
src/widgets/propertywidgets/emitterpropertywidget.h 
src/widgets/propertywidgets/nodepropertywidget.h 
src/editor/editorvrcontroller.h 
src/widgets/propertywidgets/demopane.h 
src/widgets/labelwidget.h 
src/widgets/checkboxwidget.h 
src/widgets/textinputwidget.h 
src/widgets/comboboxwidget.h 
src/widgets/hfloatsliderwidget.h 
src/widgets/texturepickerwidget.h 
src/io/materialreader.hpp 
src/widgets/filepickerwidget.h 
src/widgets/propertywidgets/meshpropertywidget.h 
src/widgets/propertywidget.h 
src/widgets/basewidget.h 
src/widgets/propertywidgets/postprocesspropertywidget.h 
src/widgets/postprocesseswidget.h 
src/dialogs/newprojectdialog.h 
src/widgets/assetwidget.h 
src/io/assetmanager.h 
src/widgets/assetpickerwidget.h 
src/constants.h 
src/widgets/keyframelabel.h 
src/uimanager.h 
src/widgets/keyframecurvewidget.h 
src/widgets/animationwidgetdata.h 
src/dialogs/getnamedialog.h 
src/widgets/createanimationwidget.h 
src/core/database/database.h 
src/core/database/projectdatabase.h 
src/core/guidmanager.h 
src/commands/transfrormscenenodecommand.h 
src/commands/changematerialpropertycommand.h 
src/commands/addscenenodecommand.h 
src/commands/deletescenenodecommand.h 
src/dialogs/progressdialog.h 
src/commands/deleteanimationkeycommand.h 
src/widgets/screenshotwidget.h 
src/widgets/projectmanager.h 
src/widgets/dynamicgrid.h 
src/widgets/itemgridwidget.hpp 
src/dialogs/renameprojectdialog.h 
src/editor/thumbnailgenerator.h 
src/widgets/mainwindowviewport.h 
src/editor/viewercontroller.h 
src/dialogs/donatedialog.h
src/irisgl/src/animation/nodekeyframe.h
src/irisgl/src/animation/keyframeanimation.h
src/irisgl/src/scenegraph/lightnode.h
src/irisgl/src/graphics/texture2d.h
src/irisgl/src/graphics/texture.h
src/irisgl/src/graphics/mesh.h
src/irisgl/src/graphics/material.h
src/irisgl/src/scenegraph/cameranode.h
src/irisgl/src/scenegraph/meshnode.h
src/irisgl/src/graphics/renderdata.h
src/irisgl/src/graphics/forwardrenderer.h
src/irisgl/src/materials/defaultmaterial.h
src/irisgl/src/graphics/vertexlayout.h
src/irisgl/src/graphics/viewport.h
src/irisgl/src/materials/billboardmaterial.h
src/irisgl/src/graphics/graphicshelper.h
src/irisgl/src/graphics/utils/billboard.h
src/irisgl/src/geometry/trimesh.h
src/irisgl/src/materials/defaultskymaterial.h
src/irisgl/src/core/meshmanager.h
src/irisgl/src/graphics/utils/fullscreenquad.h
src/irisgl/src/vr/vrdevice.h
src/irisgl/src/math/mathhelper.h
src/irisgl/src/irisglfwd.h
src/irisgl/src/graphics/shader.h
src/irisgl/src/irisgl.h
src/irisgl/src/math/intersectionhelper.h
src/irisgl/src/animation/keyframeset.h
src/irisgl/src/math/bezierhelper.h
src/irisgl/src/animation/animation.h
src/irisgl/src/materials/materialhelper.h
src/irisgl/src/core/irisutils.h
src/irisgl/src/scenegraph/viewernode.h
src/irisgl/src/materials/viewermaterial.h
src/irisgl/src/graphics/particle.h
src/irisgl/src/graphics/particlerender.h
src/irisgl/src/graphics/renderitem.h
src/irisgl/src/scenegraph/particlesystemnode.h
src/irisgl/src/vr/vrmanager.h
src/irisgl/src/graphics/iviewsource.h
src/irisgl/src/materials/custommaterial.h
src/irisgl/src/graphics/postprocess.h
src/irisgl/src/graphics/postprocessmanager.h
src/irisgl/src/graphics/rendertexture.h
src/irisgl/src/graphics/rendertarget.h
src/irisgl/src/postprocesses/bloompostprocess.h
src/irisgl/src/postprocesses/coloroverlaypostprocess.h
src/irisgl/src/postprocesses/radialblurpostprocess.h
src/irisgl/src/postprocesses/greyscalepostprocess.h
src/irisgl/src/postprocesses/ssaopostprocess.h
src/irisgl/src/postprocesses/materialpostprocess.h
src/irisgl/src/animation/propertyanim.h
src/irisgl/src/animation/animableproperty.h
src/irisgl/src/utils/hashedlist.h
src/irisgl/src/graphics/skeleton.h
src/irisgl/src/animation/skeletalanimation.h
src/irisgl/src/animation/floatcurve.h
src/irisgl/src/scenegraph/scene.h
src/irisgl/src/scenegraph/scenenode.h
src/irisgl/src/core/property.h
src/irisgl/src/geometry/boundingsphere.h
src/irisgl/src/geometry/plane.h
src/irisgl/src/geometry/frustum.h
src/irisgl/src/math/transform.h
src/irisgl/src/core/logger.h
src/irisgl/src/core/performancetimer.h
src/irisgl/src/graphics/renderlist.h
src/irisgl/src/graphics/renderstates.h
src/irisgl/src/graphics/utils/linemeshbuilder.h
src/irisgl/src/graphics/utils/shapehelper.h
src/irisgl/src/materials/colormaterial.h
src/irisgl/src/postprocesses/fxaapostprocess.h
src/irisgl/src/graphics/graphicsdevice.h
src/irisgl/src/widgets/renderwidget.h
src/irisgl/src/graphics/spritebatch.h
src/irisgl/src/graphics/font.h
src/irisgl/src/graphics/blendstate.h
src/irisgl/src/graphics/depthstate.h
src/irisgl/src/graphics/rasterizerstate.h
src/irisgl/src/content/contentmanager.h
src/irisgl/src/libovr/Include/OVR_CAPI.h
src/irisgl/src/libovr/Include/OVR_CAPI_Audio.h
src/irisgl/src/libovr/Include/OVR_CAPI_D3D.h
src/irisgl/src/libovr/Include/OVR_CAPI_GL.h
src/irisgl/src/libovr/Include/OVR_CAPI_Keys.h
src/irisgl/src/libovr/Include/OVR_ErrorCode.h
src/irisgl/src/libovr/Include/OVR_Version.h
src/irisgl/src/libovr/Include/Extras/OVR_CAPI_Util.h
src/irisgl/src/libovr/Include/Extras/OVR_Math.h
src/irisgl/src/libovr/Include/Extras/OVR_StereoProjection.h
src/irisgl/src/libovr/Src/OVR_CAPI_Prototypes.h
src/irisgl/src/zip/miniz.h
src/irisgl/src/zip/zip.h
)

set (FORMS
src/dialogs/renamelayerdialog.ui 
src/widgets/colorvaluewidget.ui 
src/widgets/colorpickerwidget.ui 
src/dialogs/preferencesdialog.ui 
src/dialogs/aboutdialog.ui 
src/dialogs/licensedialog.ui 
src/dialogs/preferences/worldsettings.ui 
src/dialogs/infodialog.ui 
src/dialogs/loadmeshdialog.ui 
src/widgets/animationwidget.ui 
src/widgets/maintimelinewidget.ui 
src/widgets/materialsets.ui 
src/widgets/accordianbladewidget.ui 
src/widgets/transformeditor.ui 
src/widgets/scenehierarchywidget.ui 
src/widgets/skypresets.ui 
src/widgets/keyframelabelwidget.ui 
src/widgets/keyframelabeltreewidget.ui 
src/widgets/modelpresets.ui 
src/mainwindow.ui 
src/widgets/labelwidget.ui 
src/widgets/checkboxwidget.ui 
src/widgets/textinputwidget.ui 
src/widgets/comboboxwidget.ui 
src/widgets/hfloatsliderwidget.ui 
src/widgets/texturepickerwidget.ui 
src/widgets/filepickerwidget.ui 
src/widgets/propertywidget.ui 
src/widgets/postprocesseswidget.ui 
src/dialogs/newprojectdialog.ui 
src/widgets/assetwidget.ui 
src/widgets/assetpickerwidget.ui 
src/widgets/keyframelabel.ui 
src/widgets/keyframecurvewidget.ui 
src/dialogs/getnamedialog.ui 
src/widgets/createanimationwidget.ui 
src/dialogs/progressdialog.ui 
src/widgets/screenshotwidget.ui 
src/widgets/projectmanager.ui 
src/dialogs/renameprojectdialog.ui 
src/dialogs/donate.ui
)

qt5_add_resources(QRCS
    app/fonts.qrc
    app/icons.qrc
    app/images.qrc
    app/materials.qrc
    app/modelpresets.qrc
    app/models.qrc
    app/shaders.qrc
    # app/skies.qrc
    app/textures.qrc
    src/irisgl/assets.qrc
)

qt5_wrap_cpp(HEADERS_moc ${HEADERS})
qt5_wrap_ui(UI_moc ${FORMS})

# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(WIN32)
    set(CMAKE_WIN32_EXECUTABLE ON)
endif()

add_executable(Jahshaka src/main.cpp ${GL3W_SRC} ${SOURCES} ${HEADERS_moc} ${QRCS})
target_link_libraries (Jahshaka Qt5::Widgets Qt5::OpenGL Qt5::Sql Qt5::Concurrent assimp ${OPENGL_LIBRARIES})